--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"dompurify": "^3.2.6",
 		"gray-matter": "^4.0.3",
 		"jsdom": "^27.0.0",
-		"next": "15.5.3",
+		"next": "^15.5.7",
 		"next-auth": "^5.0.0-beta.22",
 		"next-mdx-remote": "^5.0.0",
 		"next-themes": "^0.4.6",
